@@ -18,6 +18,8 @@ Changes from 2.3.1 to XXX
 - Fixed pyflakes warnings (closes :issue:`102`).
 - Cython extensions updated to use new constructs (closes `issue:`100`)
 - Reduced the number of build warnings (closes `issue:`101`)
+- Fixed broken inheritance in :class:`tables.IsDescription` classes
+  (thanks to Andrea Bedini).  Closes :issue:`65`.
 
 
 Changes from 2.3 to 2.3.1
